# uno-anthropic

./: .gitignore  Cargo.toml  README.md  justfile
.archive/plans/: 00001-snoopy-dancing-gadget.md
examples/: bedrock.rs  message.rs  streaming.rs  tools.rs
src/: bedrock.rs  client.rs  config.rs  error.rs  lib.rs  middleware.rs  oauth.rs  retry.rs  vertex.rs
src/batches/: mod.rs  types.rs
src/beta/: mod.rs
src/files/: mod.rs  types.rs
src/messages/: mod.rs  params.rs  streaming.rs
src/models/: mod.rs
src/skills/: mod.rs  types.rs
src/streaming/: sse.rs
src/types/: citation.rs  common.rs  content.rs  document.rs  image.rs  message.rs  metadata.rs  mod.rs  model.rs  page.rs  search.rs  thinking.rs  tool.rs  usage.rs
tests/: serde_roundtrip.rs
