[package]
name = "uno-anthropic"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "deflate", "brotli", "zstd"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
pin-project-lite = "0.2"
bon = "3"
tracing = "0.1"
http = "1"
bytes = "1"
rand = "0.9"

# Optional: Bedrock
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
aws-sigv4 = { version = "1", optional = true }
aws-smithy-runtime-api = { version = "1", optional = true }

# Optional: Vertex
gcp_auth = { version = "0.12", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"

[features]
default = []
bedrock = ["dep:aws-config", "dep:aws-credential-types", "dep:aws-sigv4", "dep:aws-smithy-runtime-api"]
vertex = ["dep:gcp_auth"]

[[example]]
name = "message"
path = "examples/message.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "tools"
path = "examples/tools.rs"

[[example]]
name = "bedrock"
path = "examples/bedrock.rs"
required-features = ["bedrock"]
